fix: corrige o gap dos botões do banner

--- a/static/tailwind.css
+++ b/static/tailwind.css
@@ -463,6 +463,10 @@ html {
     overflow-x: hidden !important;
   }
 
+  button {
+    font-weight: 400;
+  }
+
   /** Remove default styles from input[type=number] */
   input[type=number]::-webkit-inner-spin-button,
   input[type=number]::-webkit-outer-spin-button {
@@ -3116,10 +3120,6 @@ html {
 .text-2xl {
   font-size: 1.5rem;
   line-height: 2rem;
-}
-.text-3xl {
-  font-size: 1.875rem;
-  line-height: 2.25rem;
 }
 .text-4xl {
   font-size: 2.25rem;
